--- a/products_service/docker-compose.dev.yml
+++ b/products_service/docker-compose.dev.yml
@@ -23,7 +23,9 @@ services:
     restart: always
 
   auth:
-    build: ../auth_service/
+    build:
+      context: ../
+      dockerfile: ./auth_service/Dockerfile
     restart: on-failure
     depends_on:
       - postgres
