--- a/kubernetes/store/charts/mongodb/Chart.yaml
+++ b/kubernetes/store/charts/mongodb/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: store
-description: Store Service
+name: mongodb
+description: A Helm chart for Kubernetes
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -22,11 +22,3 @@ version: 0.1.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.16.0"
-
-dependencies:
-  - name: postgresql
-    version: 11.8.1
-    repository: https://charts.bitnami.com/bitnami
-  - name: redis
-    version: 17.1.2
-    repository: https://charts.bitnami.com/bitnami
