--- a/kubernetes/store/charts/mongodb/templates/service.yaml
+++ b/kubernetes/store/charts/mongodb/templates/service.yaml
@@ -5,11 +5,8 @@ metadata:
   labels:
     {{- include "mongodb.labels" . | nindent 4 }}
 spec:
-  type: {{ .Values.service.type }}
   ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
+    - port: 27017
+      targetPort: 27017
   selector:
     {{- include "mongodb.selectorLabels" . | nindent 4 }}
