--- a/kubernetes/store/charts/postgresql/templates/PersistentVolume.yaml
+++ b/kubernetes/store/charts/postgresql/templates/PersistentVolume.yaml
@@ -1,16 +1,16 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ include "mongodb.fullname" . }}-pv
+  name: {{ include "postgresql.fullname" . }}-pv
 spec:
   capacity:
-    storage: 2Gi
+    storage: 1Gi
   volumeMode: Filesystem
   accessModes:
     - ReadWriteOnce
   persistentVolumeReclaimPolicy: Retain
   local:
-    path: /mnt/data
+    path: /var/lib/postgresql/data
   nodeAffinity:
     required:
       nodeSelectorTerms:
