--- a/kubernetes/store/charts/postgresql/templates/PersistentVolumeClaim.yaml
+++ b/kubernetes/store/charts/postgresql/templates/PersistentVolumeClaim.yaml
@@ -2,10 +2,15 @@ kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: {{ include "postgresql.fullname" . }}-pvc
+  labels:
+    {{- include "postgresql.labels" . | nindent 4 }}
 spec:
   accessModes:
     - ReadWriteOnce
-  volumeMode: Filesystem
+  storageClassName: {{ include "postgresql.fullname" . }}-local-storage
   resources:
     requests:
-      storage: 1Gi
+      storage: 5Gi
+  selector:
+    matchLabels:
+      {{- include "postgresql.selectorLabels" . | nindent 6 }}
