--- a/kubernetes/store/charts/postgresql/templates/StatefulSet.yaml
+++ b/kubernetes/store/charts/postgresql/templates/StatefulSet.yaml
@@ -16,7 +16,8 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
         - name: {{ include "postgresql.fullname" . }}
-          image: postgres:latest
+          image: {{ .Values.image.repository }}
+          imagePullPolicy: {{ .Values.image.pullPolicy | quote }}
           env:
             - name: POSTGRES_USER
               valueFrom:
