--- a/backoffice/package.json
+++ b/backoffice/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "latest",
     "@mui/icons-material": "latest",
     "@mui/material": "latest",
+    "@mui/x-data-grid": "^6.2.0",
     "axios": "^1.3.5",
     "next": "latest",
     "react": "latest",
